# mareweb

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile.py  compile_project.py  index.html  package-lock.json  package.json  shell.html
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
examples/: basic_mesh.cpp  basic_renderer.cpp  basic_texture.cpp  cube.cpp  square.cpp  triangle.cpp  triangle.md
iac/: .env.template  cdktf.json  main.ts  package-lock.json  package.json  terraform.tfvars
iac/resources/: cloudfrontDistribution.ts  route53.ts  sslCertificate.ts  websiteBucket.ts
iac/stacks/: WebsiteStack.ts
include/: mareweb_application.hpp
include/mareweb/: application.hpp  buffer.hpp  entity.hpp  material.hpp  mesh.hpp  object.hpp  pipeline.hpp  renderer.hpp  scene.hpp  shader.hpp  system.hpp  texture.hpp  vertex_attributes.hpp
include/mareweb/components/: camera.hpp  transform.hpp
include/mareweb/entities/: arrow_2d.hpp  camera.hpp  renderable.hpp  renderable_mesh.hpp  text.hpp
include/mareweb/materials/: flat_color_material.hpp  instanced_flat_color_material.hpp  simple_lit_material.hpp  textured_material.hpp
include/mareweb/meshes/: array_mesh.hpp  circle_mesh.hpp  cone_mesh.hpp  cube_mesh.hpp  cylinder_mesh.hpp  line_mesh.hpp  primitive_mesh.hpp  slope_mesh.hpp  sphere_mesh.hpp  square_mesh.hpp  torus_mesh.hpp  triangle_mesh.hpp  tube_mesh.hpp
src/: application.cpp  buffer.cpp  main-old.cpp  main.cpp  mareweb_application.cpp  material.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp
src/components/: camera.cpp  camera.hpp  transform.cpp
src/entities/: camera.cpp
